# halley

./: .clang-format  meson.build
.github/workflows/: test.yml
lib/: assembler.h  halley.def  instructions.h  memory_management_unit.c  memory_management_unit_p.h  meson.build  system.c  system_p.h
lib/inc/: memory_allocation.h  system.h
test/: cpu_test.cpp  meson.build  sign_extension_test.cpp  test.cpp
